--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "matplotlib>=3.10.3",
     "numpy>=2.2.6",
     "pandas>=2.3.1",
+    "scikit-learn>=1.7.0",
+    "scipy>=1.15.3",
 ]
